--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "autoprefixer": "^10.4.21",
+    "chart.js": "^4.5.0",
     "lucide-react": "^0.515.0",
     "postcss": "^8.5.5",
     "react": "^19.1.0",
